--- a/app/src/main/res/layout/fragment_staff_book_statistics.xml
+++ b/app/src/main/res/layout/fragment_staff_book_statistics.xml
@@ -2,10 +2,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp">
-
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    <!-- Back Button (Arrow Icon) -->
+    <ImageButton
+        android:id="@+id/btnBack"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_margin="8dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:src="@drawable/ic_arrow_back"
+        android:contentDescription="@string/back_button" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/btnBack"
         android:orientation="vertical"
         android:padding="16dp"
         android:background="@android:color/white"
@@ -47,4 +61,5 @@
             android:layout_height="450dp"
             android:layout_marginBottom="32dp" />
     </LinearLayout>
+    </RelativeLayout>
 </ScrollView>
