--- a/app/src/main/res/layout/fragment_staff_cloud_books_catalogue.xml
+++ b/app/src/main/res/layout/fragment_staff_cloud_books_catalogue.xml
@@ -30,10 +30,18 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="OpenLibrary API"
+            android:text="API"
             android:gravity="center"
             android:textSize="18sp"
             android:textStyle="bold"
+            android:paddingBottom="8dp"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Select a book genre and populate the library with  books from ."
+            android:gravity="center"
+            android:textSize="13sp"
+            android:textColor="@android:color/darker_gray"
             android:paddingBottom="8dp"/>
 
         <!--<TextView
