--- a/app/src/main/res/layout/fragment_edit_review.xml
+++ b/app/src/main/res/layout/fragment_edit_review.xml
@@ -22,6 +22,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:orientation="vertical">
 
             <!-- Book Title -->
@@ -41,15 +42,22 @@
                 android:text="Author Name"
                 android:textSize="14sp"
                 android:layout_marginTop="4dp" />
-            <TextView
+            <!--<TextView
                 android:id="@+id/tvBookSummary"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Book Summary"
                 android:textSize="14sp"
-                android:layout_marginTop="4dp" />
+                android:layout_marginTop="4dp" />-->
         </LinearLayout>
     </LinearLayout>
+    <RatingBar
+        android:id="@+id/ratingBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:numStars="5"
+        android:stepSize="1.0"
+        android:layout_marginTop="16dp" />
     <EditText
         android:id="@+id/etReviewText"
         android:layout_width="match_parent"
@@ -60,14 +68,6 @@
         android:background="@drawable/review_textview"
         android:gravity="top"
         android:padding="10dp" />
-
-    <RatingBar
-        android:id="@+id/ratingBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:numStars="5"
-        android:stepSize="1.0"
-        android:layout_marginTop="16dp" />
 
     <Button
         android:id="@+id/btnSave"
