--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#edebeb</color>
 
-    <color name="dark_primary">#BB86FC</color>
+    <color name="dark_primary">#736ff5</color>
     <color name="dark_on_primary">#000000</color>
     <color name="dark_background">#121212</color>
     <color name="dark_surface">#121212</color>
