--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -10,6 +10,7 @@
 
     <TextView
         android:fontFamily="@font/poppinsregular"
+        android:id="@+id/tvRegister"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Register"
@@ -37,13 +38,20 @@
         android:inputType="textPassword"
         android:minHeight="48dp" />
 
-    <Button
-        android:fontFamily="@font/poppinsregular"
+
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btnRegister"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:text="Register"
-        android:layout_marginTop="16dp" />
+        android:textColor="@android:color/white"
+        android:backgroundTint="#736ff5"
+        app:icon="@drawable/ic_register"
+        app:iconGravity="textStart"
+        app:iconSize="25dp"
+        app:iconTint="@android:color/white"
+        app:iconPadding="8dp" />
     <TextView
         android:id="@+id/tvLogin"
         android:layout_width="wrap_content"
