--- a/app/src/main/res/layout/item_genre_header.xml
+++ b/app/src/main/res/layout/item_genre_header.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="8dp"
-    android:background="@android:color/darker_gray"
+    android:background="#736ff5"
     android:textColor="@android:color/white"
     android:textSize="16sp"
     android:textStyle="bold" />
