--- a/app/src/main/res/values-v23/themes.xml
+++ b/app/src/main/res/values-v23/themes.xml
@@ -1,6 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
   <style name="Theme.AndroidELibrary" parent="Base.Theme.AndroidELibrary">
     <!-- Transparent system bars for edge-to-edge. -->
+    <item name="android:fontFamily">@font/poppinsregular</item>
     <item name="android:navigationBarColor">@android:color/transparent</item>
     <item name="android:statusBarColor">@android:color/transparent</item>
     <item name="android:windowLightStatusBar">?attr/isLightTheme</item>
