--- a/app/src/main/res/layout/fragment_staff_add_book.xml
+++ b/app/src/main/res/layout/fragment_staff_add_book.xml
@@ -1,4 +1,5 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp">
@@ -99,12 +100,20 @@
             android:layout_height="220dp"
             android:visibility="gone"
             android:scaleType="centerCrop" />
-        <Button
+
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/btnSelectCover"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:textColor="@android:color/white"
+            android:backgroundTint="#736ff5"
             android:text="Select Cover Image"
-            android:layout_marginTop="8dp" />
+            app:icon="@drawable/ic_cover"
+            app:iconSize="25dp"
+            app:iconTint="@android:color/white"
+            app:iconGravity="textStart"
+            app:iconPadding="8dp" />
 
         <TextView
             android:id="@+id/tvContent"
@@ -115,26 +124,48 @@
             android:textSize="16sp"
             android:textStyle="bold" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/btnSelectContent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Select Content File"
-            android:layout_marginTop="8dp" />
-
-
-        <Button
-            android:id="@+id/btnSubmit"
-            android:layout_marginTop="16dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Submit" />
-        <Button
-            android:id="@+id/btnCancel"
             android:layout_marginTop="8dp"
+            android:textColor="@android:color/white"
+            android:backgroundTint="#736ff5"
+            android:text="Select Content File"
+            app:icon="@drawable/ic_return_book"
+            app:iconSize="25dp"
+            app:iconTint="@android:color/white"
+            app:iconGravity="textStart"
+            app:iconPadding="8dp" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnSubmit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Cancel" />
+            android:layout_marginTop="16dp"
+            android:textColor="@android:color/white"
+            android:backgroundTint="#736ff5"
+            android:text="Submit"
+            app:icon="@drawable/ic_submit"
+            app:iconSize="25dp"
+            app:iconTint="@android:color/white"
+            app:iconGravity="textStart"
+            app:iconPadding="8dp" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnCancel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:textColor="@android:color/white"
+            android:backgroundTint="#736ff5"
+            android:text="Cancel"
+            app:icon="@drawable/ic_cancel"
+            app:iconSize="25dp"
+            app:iconTint="@android:color/white"
+            app:iconGravity="textStart"
+            app:iconPadding="8dp" />
+
 
     </LinearLayout>
 </ScrollView>
