--- a/app/src/main/res/layout/fragment_staff_books_catalogue.xml
+++ b/app/src/main/res/layout/fragment_staff_books_catalogue.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp">
@@ -38,7 +39,9 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:contentDescription="@string/download_book"
-            android:src="@drawable/ic_download" />
+            android:src="@drawable/ic_download"
+            app:backgroundTint="#736ff5"
+            app:tint="@color/white"/>
 
         <!-- Floating Action Button for Add Book -->
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -46,7 +49,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="@string/add_book"
-            android:src="@drawable/ic_add" />
+            android:src="@drawable/ic_add"
+            app:backgroundTint="#736ff5"
+            app:tint="@color/white"/>
     </LinearLayout>
 
     <!-- No Books Text -->
