--- a/app/src/main/res/layout/item_staff_account.xml
+++ b/app/src/main/res/layout/item_staff_account.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
@@ -24,18 +25,31 @@
         android:visibility="gone"
         android:textSize="14sp" />
 
-    <Button
+
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btnEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Edit" />
+        android:textColor="@android:color/white"
+        android:backgroundTint="#736ff5"
+        android:text="Edit"
+        app:icon="@drawable/ic_edit"
+        app:iconSize="25dp"
+        app:iconTint="@android:color/white"
+        app:iconGravity="textStart"
+        app:iconPadding="8dp" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btnDelete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
+        android:textColor="@android:color/white"
         android:backgroundTint="@android:color/holo_red_dark"
-        android:textColor="@color/white"
-        android:text="Delete" />
+        android:text="Delete"
+        app:icon="@drawable/ic_delete"
+        app:iconSize="25dp"
+        app:iconTint="@android:color/white"
+        app:iconGravity="textStart"
+        app:iconPadding="8dp" />
 </LinearLayout>
