--- a/app/src/main/res/layout/marker_view.xml
+++ b/app/src/main/res/layout/marker_view.xml
@@ -3,7 +3,7 @@
     android:id="@+id/tvContent"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@drawable/marker_background"
+    android:background="#736ff5"
     android:padding="5dp"
     android:textColor="@android:color/white"
     android:textSize="12sp"
